# GmailFilter

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_db_backed_tokens.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  account.py  filter_cache.py  scan_result.py  suggestion.py
backend/app/routers/: accounts.py  events.py  filters.py  labels.py  scan.py  suggestions.py
backend/app/scanner/: ai_suggester.py  daemon.py  flood_detector.py  notifier.py
backend/app/schemas/: account.py  filter.py  label.py  scan.py  suggestion.py
backend/app/services/: filter_service.py  gmail_client.py  label_service.py  oauth.py  suggestion_service.py
backend/tests/: conftest.py  test_account_model.py  test_accounts_router.py  test_oauth_service.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: accounts.ts  client.ts  events.ts  filters.ts  labels.ts  scan.ts  suggestions.ts
frontend/src/components/filters/: FilterBadge.css  FilterBadge.tsx  FilterEditor.css  FilterEditor.tsx  FilterList.css  FilterList.tsx  (+2 more)
frontend/src/pages/: AddAccount.css  AddAccount.tsx  Dashboard.css  Dashboard.tsx  FilterManager.css  FilterManager.tsx  NotFound.tsx  Suggestions.css  Suggestions.tsx
frontend/src/store/: accountStore.ts  filterStore.ts  suggestionStore.ts
(+33 files in other folders)
